Fix gradient rendering on safari
#24

--- a/src/dashboards/Compact/styles.scss
+++ b/src/dashboards/Compact/styles.scss
@@ -31,7 +31,7 @@
         width: 100%;
         height: 50px;
         bottom: 0;
-        background: linear-gradient(0deg, rgba($colors-blues-blue10, 1) 0%, rgba($colors-blues-blue10, 0.7) 50%, transparent 100%);
+        background: linear-gradient(0deg, rgba($colors-blues-blue10, 1) 0%, rgba($colors-blues-blue10, 0.7) 50%, rgba($colors-blues-blue10, 0) 100%);
         z-index: 1;
     }
 
